--- a/KinematicDesign2D_ThreeBodies_MultiThread/MainWindow.ui
+++ b/KinematicDesign2D_ThreeBodies_MultiThread/MainWindow.ui
@@ -560,6 +560,9 @@
    </property>
   </action>
   <action name="actionRestrictMotionRange">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Restrict Motion Range</string>
    </property>
